# Space-Engine

./: CMakeLists.txt  Camera.cpp  Camera.h  Drawer.cpp  Drawer.h  ErrorManager.cpp  ErrorManager.h  Logger.cpp  Logger.h  Makefile  Material.cpp  Material.h  Mesh.cpp  Mesh.cpp~  Mesh.h  MeshManager.cpp  MeshManager.h  ObjImporter.cpp  ObjImporter.h  README  Renderer.cpp  Renderer.h  TODO  Triangle.cpp  Triangle.cpp~  Triangle.h  Triangle.h~  Triangles.cpp  Triangles.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vertex.cpp  Vertex.h  index.html  main.cpp  main.cpp~  params.json
Data/: cubecolor.mtl  ship.mtl
include/: Engine.h  Logger.h  Material.h  MaterialManager.h  Mesh.h  MeshManager.h  ObjLoader.h  Renderer.h  Triangle.h  VarManager.h  Vec2.h  Vec3.h  Vertex.h
include/GameEngine/: EngineInstance.h  Logger.h  Material.h  MaterialManager.h  Renderer.h
include/SDL/: SDL_config.h
src/Game/: CMakeLists.txt  Makefile  README  main.cpp
src/GameEngine/: CMakeLists.txt  Engine.cpp  EngineInstance.cpp  EngineInstance.h  Logger.cpp  Material.cpp  MaterialManager.cpp  MaterialManager.h  Mesh.cpp  MeshManager.cpp  MeshManager.h  ObjLoader.cpp  Renderer.cpp  Renderer.h  Triangle.cpp  VarManager.cpp  Vec2.cpp  Vec3.cpp  Vec3.h  Vertex.cpp
